Introduce interface for mapping tools.
Add mappingutil and others...